# CogniPy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
codegnipy/: __init__.py  determinism.py  observability.py  providers.py  validation.py
examples/: demo.py
tests/: test_providers.py  test_validation.py
